# h00d.fun

./: CNAME  DEPLOY.md  DigiOcean  DigiOcean.pub  GO-LIVE.md  LICENSE  README.md  curve.html  cute.css  discover.html  index.html  launch.html  market.html  package.json  railway.json  supabase_schema.sql  swap.html
.github/workflows/: ci.yml
anchor/: .gitignore  Anchor.toml  README.md  package.json
anchor/migrations/: deploy.ts
anchor/programs/h00d_market/: Cargo.toml
anchor/tests/: h00d_market.ts
program/: lib.rs
scripts/: check-web.sh  compute-sri.sh
